{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 853,
  "lineage": "ec4d6cdf-0920-e1a6-131c-28e29688e40f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/frontendIPConfigurations/lb-public-ip-config",
                "name": "lb-public-ip-config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/publicIPAddresses/publicIPForLB"
              }
            ],
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "location": "centralindia",
            "name": "WTloadbalancer",
            "resource_group_name": "WTResourceGroup1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/backendAddressPools/WTloadbalancer-bepool",
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "WTloadbalancer-bepool",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/frontendIPConfigurations/lb-public-ip-config",
            "frontend_ip_configuration_name": "lb-public-ip-config",
            "frontend_port": 200,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "lb-nat-ssh-0",
            "protocol": "Tcp",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/frontendIPConfigurations/lb-public-ip-config",
            "frontend_ip_configuration_name": "lb-public-ip-config",
            "frontend_port": 201,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "lb-nat-ssh-1",
            "protocol": "Tcp",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/frontendIPConfigurations/lb-public-ip-config",
            "frontend_ip_configuration_name": "lb-public-ip-config",
            "frontend_port": 202,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-2",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "lb-nat-ssh-2",
            "protocol": "Tcp",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/probes/WTloadbalancer-health-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "WTloadbalancer-health-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/backendAddressPools/WTloadbalancer-bepool",
            "backend_address_pool_ids": [
              "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/backendAddressPools/WTloadbalancer-bepool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/frontendIPConfigurations/lb-public-ip-config",
            "frontend_ip_configuration_name": "lb-public-ip-config",
            "frontend_port": 8080,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/loadBalancingRules/WTloadbalancer-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer",
            "name": "WTloadbalancer-rule",
            "probe_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/probes/WTloadbalancer-health-probe",
            "protocol": "Tcp",
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/dbni0",
            "internal_domain_name_suffix": "cxtdphjya15u5dnt3gg4bh4zaa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration2",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/DBsubnet"
              }
            ],
            "location": "centralindia",
            "name": "dbni0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.test2",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni0",
            "internal_domain_name_suffix": "cxtdphjya15u5dnt3gg4bh4zaa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration0",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet"
              }
            ],
            "location": "centralindia",
            "name": "appni0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni1",
            "internal_domain_name_suffix": "cxtdphjya15u5dnt3gg4bh4zaa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration1",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet"
              }
            ],
            "location": "centralindia",
            "name": "appni1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni2",
            "internal_domain_name_suffix": "cxtdphjya15u5dnt3gg4bh4zaa.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testConfiguration2",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet"
              }
            ],
            "location": "centralindia",
            "name": "appni2",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "WTResourceGroup1"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni0/ipConfigurations/testConfiguration0|/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-0",
            "ip_configuration_name": "testConfiguration0",
            "nat_rule_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-0",
            "network_interface_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_nat_rule.main",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni1/ipConfigurations/testConfiguration1|/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-1",
            "ip_configuration_name": "testConfiguration1",
            "nat_rule_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-1",
            "network_interface_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_nat_rule.main",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni2/ipConfigurations/testConfiguration2|/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-2",
            "ip_configuration_name": "testConfiguration2",
            "nat_rule_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/loadBalancers/WTloadbalancer/inboundNatRules/lb-nat-ssh-2",
            "network_interface_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkInterfaces/appni2"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_nat_rule.main",
            "azurerm_network_interface.tf-nic",
            "azurerm_public_ip.test",
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/App-nsg",
            "location": "centralindia",
            "name": "App-nsg",
            "resource_group_name": "WTResourceGroup1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom200-210Inbound",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom8080Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/DB-nsg",
            "location": "centralindia",
            "name": "DB-nsg",
            "resource_group_name": "WTResourceGroup1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DBAccessrule0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "122.170.248.40",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "8080",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DBAccessrule1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "8080",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/publicIPAddresses/publicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.204.144.42",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "publicIPForLB",
            "resource_group_name": "WTResourceGroup1",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet",
            "name": "Applicaionsubnet",
            "resource_group_name": "WTResourceGroup1",
            "virtual_network_name": "WTvn"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/DBsubnet",
            "name": "DBsubnet",
            "resource_group_name": "WTResourceGroup1",
            "virtual_network_name": "WTvn"
          },
          "dependencies": [
            "azurerm_resource_group.example",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet",
            "network_security_group_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/App-nsg",
            "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/Applicaionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.example",
            "azurerm_subnet.test1",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/DBsubnet",
            "network_security_group_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/DB-nsg",
            "subnet_id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn/subnets/DBsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.example1",
            "azurerm_resource_group.example",
            "azurerm_subnet.test2",
            "azurerm_virtual_network.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9d37e615-0638-4fff-8db3-e98de09fd900",
            "id": "/subscriptions/8659e423-a7ae-4e8f-9d43-3f63027b6e19/resourceGroups/WTResourceGroup1/providers/Microsoft.Network/virtualNetworks/WTvn",
            "location": "centralindia",
            "name": "WTvn",
            "resource_group_name": "WTResourceGroup1",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.example"
          ]
        }
      ]
    }
  ]
}